--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+### Android ###
 # Built application files
 *.apk
-*.aar
 *.ap_
 *.aab
 
@@ -14,8 +14,6 @@
 bin/
 gen/
 out/
-#  Uncomment the following line in case you need and you don't have the release build type files in your app
-# release/
 
 # Gradle files
 .gradle/
@@ -38,17 +36,10 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
+.idea/
 # Android Studio 3 in .gitignore file.
-.idea/caches
+.idea/caches/build_file_checksums.ser
 .idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
-.idea/navEditor.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -57,7 +48,6 @@ captures/
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
-.cxx/
 
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
@@ -83,3 +73,9 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+### Android Patch ###
+gen-external-apklibs
+output.json
+
+.DS_Store
