--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Parent activity means we will have back button in top of activity and go to the specified activity -->
+        <activity android:name=".FirstActivity" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".SecondActivity" android:parentActivityName=".FirstActivity"/>
     </application>
 
 </manifest>
