--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".view.ChainConstraintActivity" android:parentActivityName=".view.MainActivity"/>
         <activity android:name=".view.StringsActivity" android:parentActivityName=".view.MainActivity"/>
         <activity android:name=".view.ResourceActivity" android:parentActivityName=".view.MainActivity"/>
+        <activity android:name=".view.ValuesLandActivity" android:parentActivityName=".view.MainActivity"/>
     </application>
 
 </manifest>
