--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
 
+    // Database
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
@@ -38,7 +48,7 @@ dependencies {
 
     // Kotlin dependencies
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     // AndroidX dependencies
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -46,6 +56,10 @@ dependencies {
 
     // Google dependencies
     implementation 'com.google.android.material:material:1.2.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Third part dependencies
     implementation 'com.github.bumptech.glide:glide:4.11.0'
