--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.jordroid.android_cloud_2020"
+        applicationId "com.godartcn.projetandroidcloud"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
